--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
-  "name": "modulearn-be",
-  "version": "0.0.0",
-  "description": "Modulearn-be MayaJS Project",
-  "main": "index.js",
-  "scripts": {
-    "maya": "maya",
-    "start": "maya serve"
-  },
-  "keywords": [
-    "mayajs"
-  ],
-  "dependencies": {
-    "@mayajs/common": "^0.3.0",
-    "@mayajs/core": "^0.3.2",
-    "@mayajs/mongo": "0.2.0"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.0",
-    "@types/mongoose": "^5.5.13",
-    "@types/node": "^12.7.1",
-    "ts-node": "^8.4.1",
-    "typescript": "^3.5.3"
-  }
+   "name": "modulearn-be",
+   "version": "0.0.0",
+   "description": "Modulearn-be MayaJS Project",
+   "main": "index.js",
+   "scripts": {
+      "maya": "maya s",
+      "start": "maya serve"
+   },
+   "keywords": [
+      "mayajs"
+   ],
+   "dependencies": {
+      "@mayajs/common": "^0.3.0",
+      "@mayajs/core": "^0.3.2",
+      "@mayajs/mongo": "0.2.0",
+      "dotenv": "^8.2.0",
+      "http-status": "^1.4.2"
+   },
+   "devDependencies": {
+      "@types/dotenv": "^8.2.0",
+      "@types/express": "^4.17.0",
+      "@types/http-status": "^1.1.2",
+      "@types/mongoose": "^5.7.7",
+      "@types/node": "^12.7.1",
+      "ts-node": "^8.4.1",
+      "typescript": "^3.5.3"
+   }
 }
