FEAT: Add guided module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     ],
     "outDir": "./dist",
     "rootDir": "./src",
-    "strict": true,
+    "strict": false,
     "moduleResolution": "node",
     "esModuleInterop": true,
     "experimentalDecorators": true,
