--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
       "dotenv": "^8.2.0",
       "http-errors": "^1.7.3",
       "http-status": "^1.4.2",
+      "jsonwebtoken": "^8.5.1",
       "passport": "^0.4.1",
       "passport-local": "^1.0.0",
       "passport-local-mongoose": "^6.0.1"
@@ -27,6 +28,7 @@
       "@types/express": "^4.17.0",
       "@types/http-errors": "^1.6.3",
       "@types/http-status": "^1.1.2",
+      "@types/jsonwebtoken": "^8.3.8",
       "@types/mongoose": "^5.5.13",
       "@types/node": "^12.7.1",
       "@types/passport": "^1.0.3",
