--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
       "@mayajs/core": "^0.3.2",
       "@mayajs/mongo": "^0.2.2",
       "dotenv": "^8.2.0",
+      "express-jwt": "^5.3.1",
       "http-errors": "^1.7.3",
       "http-status": "^1.4.2",
       "jsonwebtoken": "^8.5.1",
@@ -26,6 +27,7 @@
    "devDependencies": {
       "@types/dotenv": "^8.2.0",
       "@types/express": "^4.17.0",
+      "@types/express-jwt": "0.0.42",
       "@types/http-errors": "^1.6.3",
       "@types/http-status": "^1.1.2",
       "@types/jsonwebtoken": "^8.3.8",
